--- a/pages/sobre/sobre.html
+++ b/pages/sobre/sobre.html
@@ -172,7 +172,7 @@
                             <p>
                                 <i class="material-icons">code</i><a href="https://github.com/rafalmeida73" class="black-text" target="_blank" rel="noopener">GitHub</a></p>
                             <p>
-                                <i class="material-icons">email</i> yourmail@domain.com</p>
+                                <i class="material-icons">email</i> rafaelsantana7213@gmail.com</p>
                         </div>
                         <div class="card-reveal">
                             <span class="card-title grey-text text-darken-4">Rafael Santana
@@ -184,7 +184,7 @@
                             <p>
                                 <i class="material-icons">code</i><a href="https://github.com/rafalmeida73" class="black-text" target="_blank" rel="noopener">GitHub</a></p>
                             <p>
-                                <i class="material-icons">email</i> yourmail@domain.com
+                                <i class="material-icons">email</i> rafaelsantana7213@gmail.com
                             </p>
                             <p>
                             </p>
@@ -213,7 +213,7 @@
                             <p>
                                 <i class="material-icons">code</i><a href="https://github.com/ronycleber" class="black-text" target="_blank" rel="noopener">GitHub</a></p>
                             <p>
-                                <i class="material-icons">email</i> yourmail@domain.com</p>
+                                <i class="material-icons">email</i> ronycleber_pm@hotmail.com</p>
                         </div>
                         <div class="card-reveal">
                             <span class="card-title grey-text text-darken-4">Rony Cleber
@@ -225,7 +225,7 @@
                             <p>
                                 <i class="material-icons">code</i><a href="https://github.com/ronycleber" class="black-text" target="_blank" rel="noopener">GitHub</a></p>
                             <p>
-                                <i class="material-icons">email</i> yourmail@domain.com</p>
+                                <i class="material-icons">email</i> ronycleber_pm@hotmail.com</p>
                             <p>
                             </p>
                             <p>
@@ -337,6 +337,7 @@
     <script src="../../js/main.js"></script>
     <script src="../../js/topo.js"></script>
     <script src="../../js/loader.js"></script>
+    <script src="../../js/materialbox.js"></script>
 </body>
 
 </html>
