--- a/pages/treino/treino.html
+++ b/pages/treino/treino.html
@@ -33,10 +33,10 @@
 
                 <ul id="navbar-items" class="right hide-on-med-and-down">
                     <li><a href="../../index.html" class="black-text">Home</a></li>
-                    <li><a href="../alunos/alunos.html" class="orange-text">Alunos</a></li>
+                    <li><a href="../alunos/alunos.html" class="black-text">Alunos</a></li>
                     <li><a href="../crie/crie.html" class="black-text">Crie</a></li>
                     <li><a href="../controle/controle.html" class="black-text">Controle</a></li>
-                    <li><a href="#" class="black-text">Treino</a></li>
+                    <li><a href="#" class="orange-text">Treino</a></li>
                 </ul>
             </div>
         </nav>
@@ -45,11 +45,265 @@
     <!-- Menu Mobile -->
     <ul id="mobile-navbar" class="sidenav">
         <li><a href="../../index.html" class="black-text">Home</a></li>
-        <li><a href="../alunos/alunos.html" class="orange-text">Alunos</a></li>
+        <li><a href="../alunos/alunos.html" class="black-text">Alunos</a></li>
         <li><a href="../crie/crie.html" class="black-text">Crie</a></li>
         <li><a href="../controle/controle.html" class="black-text">Controle</a></li>
-        <li><a href="#" class="black-text">Treino</a></li>
+        <li><a href="#" class="orange-text">Treino</a></li>
     </ul>
+
+    <div class="container">
+        <!-- PESQUISA -->
+        <div class="nav-wrapper">
+            <form>
+                <div class="input-field">
+                    <input id="search" type="search" required placeholder="Pesquisar">
+                    <label class="label-icon" for="search"><i class="material-icons">search</i></label>
+                    <i class="material-icons">close</i>
+                </div>
+            </form>
+        </div>
+
+
+        <!-- ALUNOS -->
+        <ul class="collection">
+            <li class="collection-item avatar">
+                <img src="../../img/avatar.png" alt="" class="circle">
+                <span class="title">João</span>
+                <p>Telefone: 11 89564534 <br> E-mail: seila@gmail.com
+                </p>
+                <a href="#modal1" class="secondary-content waves-effect waves-light modal-trigger"><i class="material-icons">account_box</i></a>
+                <div id="modal1" class="modal">
+                    <div class="modal-content">
+                        <br>
+                        <h4>João</h4>
+                        <p>Sobrenome: Silva</p>
+                        <p>Telefone: 11 89564534</p>
+                        <p>Id Strava: 45454</p>
+                        <P>Cidade: São Paulo</P>
+                        <p>Estado: SP</p>
+                        <P>Sexo: Masculino</P>
+                    </div>
+                    <div class="modal-footer">
+                        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Enviar mensagem</a>
+                    </div>
+                </div>
+            </li>
+            <li class="collection-item avatar">
+                <img src="../../img/avatar.png" alt="" class="circle">
+                <span class="title">João</span>
+                <p>Telefone: 11 89564534 <br> E-mail: seila@gmail.com
+                </p>
+                <a href="#modal1" class="secondary-content waves-effect waves-light modal-trigger"><i class="material-icons">account_box</i></a>
+                <div id="modal1" class="modal">
+                    <div class="modal-content">
+                        <br>
+                        <h4>João</h4>
+                        <p>Sobrenome: Silva</p>
+                        <p>Telefone: 11 89564534</p>
+                        <p>Id Strava: 45454</p>
+                        <P>Cidade: São Paulo</P>
+                        <p>Estado: SP</p>
+                        <P>Sexo: Masculino</P>
+                    </div>
+                    <div class="modal-footer">
+                        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Enviar mensagem</a>
+                    </div>
+                </div>
+            </li>
+            <li class="collection-item avatar">
+                <img src="../../img/avatar.png" alt="" class="circle">
+                <span class="title">João</span>
+                <p>Telefone: 11 89564534 <br> E-mail: seila@gmail.com
+                </p>
+                <a href="#modal1" class="secondary-content waves-effect waves-light modal-trigger"><i class="material-icons">account_box</i></a>
+                <div id="modal1" class="modal">
+                    <div class="modal-content">
+                        <br>
+                        <h4>João</h4>
+                        <p>Sobrenome: Silva</p>
+                        <p>Telefone: 11 89564534</p>
+                        <p>Id Strava: 45454</p>
+                        <P>Cidade: São Paulo</P>
+                        <p>Estado: SP</p>
+                        <P>Sexo: Masculino</P>
+                    </div>
+                    <div class="modal-footer">
+                        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Enviar mensagem</a>
+                    </div>
+                </div>
+            </li>
+            <li class="collection-item avatar">
+                <img src="../../img/avatar.png" alt="" class="circle">
+                <span class="title">João</span>
+                <p>Telefone: 11 89564534 <br> E-mail: seila@gmail.com
+                </p>
+                <a href="#modal1" class="secondary-content waves-effect waves-light modal-trigger"><i class="material-icons">account_box</i></a>
+                <div id="modal1" class="modal">
+                    <div class="modal-content">
+                        <br>
+                        <h4>João</h4>
+                        <p>Sobrenome: Silva</p>
+                        <p>Telefone: 11 89564534</p>
+                        <p>Id Strava: 45454</p>
+                        <P>Cidade: São Paulo</P>
+                        <p>Estado: SP</p>
+                        <P>Sexo: Masculino</P>
+                    </div>
+                    <div class="modal-footer">
+                        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Enviar mensagem</a>
+                    </div>
+                </div>
+            </li>
+            <li class="collection-item avatar">
+                <img src="../../img/avatar.png" alt="" class="circle">
+                <span class="title">João</span>
+                <p>Telefone: 11 89564534 <br> E-mail: seila@gmail.com
+                </p>
+                <a href="#modal1" class="secondary-content waves-effect waves-light modal-trigger"><i class="material-icons">account_box</i></a>
+                <div id="modal1" class="modal">
+                    <div class="modal-content">
+                        <br>
+                        <h4>João</h4>
+                        <p>Sobrenome: Silva</p>
+                        <p>Telefone: 11 89564534</p>
+                        <p>Id Strava: 45454</p>
+                        <P>Cidade: São Paulo</P>
+                        <p>Estado: SP</p>
+                        <P>Sexo: Masculino</P>
+                    </div>
+                    <div class="modal-footer">
+                        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Enviar mensagem</a>
+                    </div>
+                </div>
+            </li>
+            <li class="collection-item avatar">
+                <img src="../../img/avatar.png" alt="" class="circle">
+                <span class="title">João</span>
+                <p>Telefone: 11 89564534 <br> E-mail: seila@gmail.com
+                </p>
+                <a href="#modal1" class="secondary-content waves-effect waves-light modal-trigger"><i class="material-icons">account_box</i></a>
+                <div id="modal1" class="modal">
+                    <div class="modal-content">
+                        <br>
+                        <h4>João</h4>
+                        <p>Sobrenome: Silva</p>
+                        <p>Telefone: 11 89564534</p>
+                        <p>Id Strava: 45454</p>
+                        <P>Cidade: São Paulo</P>
+                        <p>Estado: SP</p>
+                        <P>Sexo: Masculino</P>
+                    </div>
+                    <div class="modal-footer">
+                        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Enviar mensagem</a>
+                    </div>
+                </div>
+            </li>
+            <li class="collection-item avatar">
+                <img src="../../img/avatar.png" alt="" class="circle">
+                <span class="title">João</span>
+                <p>Telefone: 11 89564534 <br> E-mail: seila@gmail.com
+                </p>
+                <a href="#modal1" class="secondary-content waves-effect waves-light modal-trigger"><i class="material-icons">account_box</i></a>
+                <div id="modal1" class="modal">
+                    <div class="modal-content">
+                        <br>
+                        <h4>João</h4>
+                        <p>Sobrenome: Silva</p>
+                        <p>Telefone: 11 89564534</p>
+                        <p>Id Strava: 45454</p>
+                        <P>Cidade: São Paulo</P>
+                        <p>Estado: SP</p>
+                        <P>Sexo: Masculino</P>
+                    </div>
+                    <div class="modal-footer">
+                        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Enviar mensagem</a>
+                    </div>
+                </div>
+            </li>
+            <li class="collection-item avatar">
+                <img src="../../img/avatar.png" alt="" class="circle">
+                <span class="title">João</span>
+                <p>Telefone: 11 89564534 <br> E-mail: seila@gmail.com
+                </p>
+                <a href="#modal1" class="secondary-content waves-effect waves-light modal-trigger"><i class="material-icons">account_box</i></a>
+                <div id="modal1" class="modal">
+                    <div class="modal-content">
+                        <br>
+                        <h4>João</h4>
+                        <p>Sobrenome: Silva</p>
+                        <p>Telefone: 11 89564534</p>
+                        <p>Id Strava: 45454</p>
+                        <P>Cidade: São Paulo</P>
+                        <p>Estado: SP</p>
+                        <P>Sexo: Masculino</P>
+                    </div>
+                    <div class="modal-footer">
+                        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Enviar mensagem</a>
+                    </div>
+                </div>
+            </li>
+            <li class="collection-item avatar">
+                <img src="../../img/avatar.png" alt="" class="circle">
+                <span class="title">João</span>
+                <p>Telefone: 11 89564534 <br> E-mail: seila@gmail.com
+                </p>
+                <a href="#modal1" class="secondary-content waves-effect waves-light modal-trigger"><i class="material-icons">account_box</i></a>
+                <div id="modal1" class="modal">
+                    <div class="modal-content">
+                        <br>
+                        <h4>João</h4>
+                        <p>Sobrenome: Silva</p>
+                        <p>Telefone: 11 89564534</p>
+                        <p>Id Strava: 45454</p>
+                        <P>Cidade: São Paulo</P>
+                        <p>Estado: SP</p>
+                        <P>Sexo: Masculino</P>
+                    </div>
+                    <div class="modal-footer">
+                        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Enviar mensagem</a>
+                    </div>
+                </div>
+            </li>
+            <li class="collection-item avatar">
+                <img src="../../img/avatar.png" alt="" class="circle">
+                <span class="title">João</span>
+                <p>Telefone: 11 89564534 <br> E-mail: seila@gmail.com
+                </p>
+                <a href="#modal1" class="secondary-content waves-effect waves-light modal-trigger"><i class="material-icons">account_box</i></a>
+                <div id="modal1" class="modal">
+                    <div class="modal-content">
+                        <br>
+                        <h4>João</h4>
+                        <p>Sobrenome: Silva</p>
+                        <p>Telefone: 11 89564534</p>
+                        <p>Id Strava: 45454</p>
+                        <P>Cidade: São Paulo</P>
+                        <p>Estado: SP</p>
+                        <P>Sexo: Masculino</P>
+                    </div>
+                    <div class="modal-footer">
+                        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Enviar mensagem</a>
+                    </div>
+                </div>
+            </li>
+
+        </ul>
+    </div>
+
+    <!-- PAGINACAO -->
+    <div id="pages">
+        <ul class="pagination center-align">
+            <li class="disabled"><a href="#!"><i class="material-icons">chevron_left</i></a></li>
+            <li class="active black"><a href="#!">1</a></li>
+            <li class="waves-effect"><a href="#!">2</a></li>
+            <li class="waves-effect"><a href="#!">3</a></li>
+            <li class="waves-effect"><a href="#!">4</a></li>
+            <li class="waves-effect"><a href="#!">5</a></li>
+            <li class="waves-effect"><a href="#!"><i class="material-icons">chevron_right</i></a></li>
+        </ul>
+    </div>
+
+
 
 
     <!-- FOOTER -->
@@ -88,6 +342,11 @@
     <script src="../../js/main.js"></script>
     <script src="../../js/topo.js"></script>
     <script src="../../js/loader.js"></script>
+    <script>
+        $(document).ready(function() {
+            $('.modal').modal();
+        });
+    </script>
 </body>
 
 </html>
