--- a/pages/financas/financas.html
+++ b/pages/financas/financas.html
@@ -83,13 +83,11 @@
     <div class="container" id="lista">
         <div class="col s12 m12 l12 left-align">
             <div class="nav-wrapper">
-                <form>
-                    <div class="input-field" style="margin-top: 360px">
-                        <input id="search" type="search" required placeholder="Pesquisar">
-                        <label class="label-icon" for="search"><i class="material-icons">search</i></label>
-                        <i class="material-icons">close</i>
-                    </div>
-                </form>
+                <div class="input-field">
+                    <input id="search" type="search" required placeholder="Pesquisar">
+                    <label class="label-icon" for="search"><i class="material-icons">search</i></label>
+                    <i class="material-icons">close</i>
+                </div>
             </div>
 
         </div>
