--- a/pages/cadastroAluno/cadastrarAlunos.html
+++ b/pages/cadastroAluno/cadastrarAlunos.html
@@ -42,7 +42,7 @@
                     </div>
                     <div class="input-field">
                         <i class="material-icons prefix">call</i>
-                        <input attrname="telephone1" type="text" id="tel">
+                        <input attrname="telephone1" type="tel" id="tel">
                         <label for="tel">Celular</label>
                     </div>
                     <div class="input-field">
